fixed padding on mobile view

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@ body {
   max-width: 37.5rem;
   height: 100vh;
   margin: 0 auto;
+  padding: 2rem;
   position: absolute;
   left: 0;
   top: 0;
